force-app/main/default/objects/Evidence_Tracking__c/Evidence_Tracking__c.object-meta.xml
<CustomObject>
    <description>This will store all the details regarding the movement of Evidence.</description>
    <label>Final Disposition</label>
    <nameField>
        <displayFormat>ET-{0}</displayFormat>
        <label>Evidence Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Dispositions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>