force-app/main/default/objects/Evidence_Tracking__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Returned to LE</fullName>
            </value>
            <value>
                <fullName>Retained for Teaching</fullName>
            </value>
            <value>
                <fullName>Returned to Owner</fullName>
            </value>
            <value>
                <fullName>Released for Adoption.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>