force-app/main/default/objects/Evidence_Tracking__c/fields/Evidence_ID__c.field-meta.xml
<CustomField>
    <fullName>Evidence_ID__c</fullName>
    <label>Evidence ID</label>
    <referenceTo>Evidence__c</referenceTo>
    <relationshipName>Evidence_Tracking</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>